@@ -3717,6 +3717,8 @@ STR_6642    :{STRING} ({COMMA32} / {COMMA32})
 STR_6643    :{STRING} ({COMMA32} / {COMMA32} KiB)
 STR_6644    :Touch enhancements
 STR_6645    :Makes some UI elements bigger so they are easier to click or tap.
+STR_6646    :Author: {STRING}
+STR_6647    :Authors: {STRING}
 
 #############
 # Scenarios #
