@@ -1325,6 +1325,8 @@ namespace OpenRCT2
         STR_ARG_6_STRINGID = 868,
         STR_ARRIVING_AT = 1103,
         STR_AVERAGE_SPEED = 1347,
+        STR_AUTHOR_STRING = 6646,
+        STR_AUTHORS_STRING = 6647,
         STR_BLOCK_SECTIONS = 3110,
         STR_BUILT_LAST_YEAR = 1854,
         STR_BUILT_THIS_YEAR = 1853,
